--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -5,4 +5,18 @@
   align-items: center;
   justify-content: center;
   justify-content: space-between;
+  padding-top: 5rem;
+
+  img {
+    width: 20%;
+    border-radius: 50%;
+  }
+
+  h2 {
+    padding: 3rem 1rem 1rem 1rem;
+  }
+
+  h3 {
+    font-size: 1rem;
+  }
 }
