--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -22,6 +22,7 @@
   align-items: center;
   padding: 1rem 2rem 1rem 2rem;
   cursor: pointer;
+  transition: all 0.75s ease-out;
   img {
     width: 30%;
   }
@@ -67,4 +68,10 @@
 .active-library {
   transform: translateX(0%);
   opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .library {
+    width: 100%;
+  }
 }
