--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,7 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  font-family: "Lato", sans-serif;
+}
 
+.App {
+  transition: all 0.5s ease;
+}
+.library-active {
+  margin-left: 30%;
+}
 h1,
 h2,
 h3 {
@@ -14,10 +23,6 @@ h3,
 h4 {
   font-weight: 400;
   color: rgb(100, 100, 100);
-}
-
-body {
-  font-family: "Lato", sans-serif;
 }
 
 @import "./song";
